@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tcl.h,v 1.236 2007/09/19 17:42:04 dgp Exp $
+ * RCS: @(#) $Id$
  */
 
 #ifndef _TCL
@@ -63,7 +63,7 @@ extern "C" {
 #define TCL_RELEASE_SERIAL  1
 
 #define TCL_VERSION	    "8.5"
-#define TCL_PATCH_LEVEL	    "8.5b1"
+#define TCL_PATCH_LEVEL	    "8.5b1.1"
 
 /*
  * The following definitions set up the proper options for Windows compilers.
